@@ -14,6 +14,8 @@
   + Visitors now should have methods that all begin with 'visit_*'. #str 
     becomes #visit_str.
 
+  + Aliased #absnt? and #prsnt? to #absent? and #present?.
+
   + Parslet::Atoms::Entity now takes only a block argument instead of context
     and block. 
 
